<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_washroom"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="2"
                android:text="@string/btn_washroom"/>

            <Button
                android:id="@+id/btn_water_fountain"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="2"
                android:text="@string/btn_water_fountain"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_addiction_clinic"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="2"
                android:text="@string/btn_addiction_clinic"/>

            <Button
                android:id="@+id/btn_hospital"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="2"
                android:text="@string/btn_hospital"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_care_home"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/btn_care_home"/>

            <TextView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>